--- a/MakeupTestingTests/Report/MakeupTestingTests.BrandsTests 04-04-2024_(12_24_55)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.BrandsTests 04-04-2024_(12_24_55)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/03/2024 4:14:50 PM</span>
+                    <span class="badge badge-primary">04/04/2024 12:24:55 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -115,25 +115,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySortProductsByPrice</p> 
-													<p class="duration text-sm">0h:0m:43s+153ms</p> 
-													<span class="datetime">16:14:50 PM</span>
+													<p class="name">VerifySelectProductsByBrands</p> 
+													<p class="duration text-sm">0h:0m:23s+973ms</p> 
+													<span class="datetime">12:24:56 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">VerifySortProductsByPrice</h5>
-															<span class='badge badge-success'>04/03/2024 4:14:50 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:15:33 PM</span>
-															<span class='badge badge-default'>0h:0m:43s+153ms</span>
+															<h5 class="test-status text-pass">VerifySelectProductsByBrands</h5>
+															<span class='badge badge-success'>04/04/2024 12:24:56 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:25:20 PM</span>
+															<span class='badge badge-default'>0h:0m:23s+973ms</span>
 														</div>
 																											</div>
 												</div>
@@ -147,20 +147,11 @@
 	</tr></thead>
 	<tbody>
 			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>16:15:33</td>
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>12:25:20</td>
 				<td>
-Test ended with Fail, 
-<br>   at OpenQA.Selenium.Support.UI.DefaultWait`1.ThrowTimeoutException(String exceptionMessage, Exception lastException)
-   at OpenQA.Selenium.Support.UI.DefaultWait`1.Until[TResult](Func`2 condition, CancellationToken token)
-   at OpenQA.Selenium.Support.UI.DefaultWait`1.Until[TResult](Func`2 condition)
-   at MakeupTesting.BasePage.WaitUntil(Func`2 func, Int32 seconds) in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTesting\BasePage.cs:line 53
-   at MakeupTestingPageObjects.DecorativeСosmeticsPage.SelectSortingByPrice() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTesting\DecorativeСosmeticsPage.cs:line 190
-   at MakeupTestingTests.DecorativeCosmeticsTests.VerifySortProductsByPrice() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 86
-   at System.RuntimeMethodHandle.InvokeMethod(Object target, Void** arguments, Signature sig, Boolean isConstructor)
-   at System.Reflection.MethodBaseInvoker.InvokeWithNoArgs(Object obj, BindingFlags invokeAttr)
+Test ended with Pass, 
 <br>
-<br>OpenQA.Selenium.WebDriverTimeoutException : Timed out after 10 seconds
 <br>									</td>
 			</tr>
 	</tbody>
