--- a/MakeupTestingTests/Report/MakeupTestingTests.CartTests 04-04-2024_(12_25_26)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.CartTests 04-04-2024_(12_25_26)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/03/2024 4:11:27 PM</span>
+                    <span class="badge badge-primary">04/04/2024 12:25:26 PM</span>
                 </a>
             </li>
         </ul>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyFollowLinkBreadCrumbs</p> 
-													<p class="duration text-sm">0h:0m:14s+454ms</p> 
-													<span class="datetime">16:11:27 PM</span>
+													<p class="name">CalculateTotalProductPriceInOrder</p> 
+													<p class="duration text-sm">0h:0m:21s+229ms</p> 
+													<span class="datetime">12:25:26 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyFollowLinkBreadCrumbs</h5>
-															<span class='badge badge-success'>04/03/2024 4:11:27 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:11:41 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+454ms</span>
+															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
+															<span class='badge badge-success'>04/04/2024 12:25:26 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:25:47 PM</span>
+															<span class='badge badge-default'>0h:0m:21s+229ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:11:41</td>
+				<td>12:25:47</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputProductNameInSearch</p> 
-													<p class="duration text-sm">0h:0m:13s+519ms</p> 
-													<span class="datetime">16:11:41 PM</span>
+													<p class="name">VerifyAddProductToCart</p> 
+													<p class="duration text-sm">0h:0m:15s+467ms</p> 
+													<span class="datetime">12:25:48 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputProductNameInSearch</h5>
-															<span class='badge badge-success'>04/03/2024 4:11:41 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:11:55 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+519ms</span>
+															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
+															<span class='badge badge-success'>04/04/2024 12:25:48 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:26:03 PM</span>
+															<span class='badge badge-default'>0h:0m:15s+467ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:11:55</td>
+				<td>12:26:03</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpaceInSearch</p> 
-													<p class="duration text-sm">0h:0m:8s+132ms</p> 
-													<span class="datetime">16:11:55 PM</span>
+													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:15s+003ms</p> 
+													<span class="datetime">12:26:03 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpaceInSearch</h5>
-															<span class='badge badge-success'>04/03/2024 4:11:55 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:12:03 PM</span>
-															<span class='badge badge-default'>0h:0m:8s+132ms</span>
+															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>04/04/2024 12:26:03 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:26:18 PM</span>
+															<span class='badge badge-default'>0h:0m:15s+003ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:12:03</td>
+				<td>12:26:18</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpecialCharactersInSearchField</p> 
-													<p class="duration text-sm">0h:0m:9s+236ms</p> 
-													<span class="datetime">16:12:03 PM</span>
+													<p class="name">VerifyDeleteProductFromCart</p> 
+													<p class="duration text-sm">0h:0m:16s+236ms</p> 
+													<span class="datetime">12:26:18 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpecialCharactersInSearchField</h5>
-															<span class='badge badge-success'>04/03/2024 4:12:03 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:12:13 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+236ms</span>
+															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
+															<span class='badge badge-success'>04/04/2024 12:26:18 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:26:35 PM</span>
+															<span class='badge badge-default'>0h:0m:16s+236ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:12:13</td>
+				<td>12:26:35</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnFirstPage</p> 
-													<p class="duration text-sm">0h:0m:10s+340ms</p> 
-													<span class="datetime">16:12:13 PM</span>
+													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:14s+972ms</p> 
+													<span class="datetime">12:26:35 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnFirstPage</h5>
-															<span class='badge badge-success'>04/03/2024 4:12:13 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:12:23 PM</span>
-															<span class='badge badge-default'>0h:0m:10s+340ms</span>
+															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>04/04/2024 12:26:35 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:26:50 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+972ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:12:23</td>
+				<td>12:26:50</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +346,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnLastPage</p> 
-													<p class="duration text-sm">0h:0m:13s+179ms</p> 
-													<span class="datetime">16:12:23 PM</span>
+													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
+													<p class="duration text-sm">0h:0m:17s+410ms</p> 
+													<span class="datetime">12:26:50 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnLastPage</h5>
-															<span class='badge badge-success'>04/03/2024 4:12:23 PM</span>
-															<span class='badge badge-danger'>04/03/2024 4:12:37 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+179ms</span>
+															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
+															<span class='badge badge-success'>04/04/2024 12:26:50 PM</span>
+															<span class='badge badge-danger'>04/04/2024 12:27:07 PM</span>
+															<span class='badge badge-default'>0h:0m:17s+410ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,7 +373,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>16:12:37</td>
+				<td>12:27:07</td>
 				<td>
 Test ended with Pass, 
 <br>
